applied collapsable fact notes several bug fixes
git-svn-id: svn://svn.webtrees.net/trunk/phpGedView@533 4201c862-f99b-1943-94d0-25fd05010cbc

--- a/themes/cloudy/style.css
+++ b/themes/cloudy/style.css
@@ -1305,3 +1305,7 @@ h2 {
 	-moz-border-radius-topleft: 0.6em;
 	-moz-border-radius-topright: 0.6em;
 }
+
+.note_details {
+	display: none;
+}
