--- a/themes/ocean/style.css
+++ b/themes/ocean/style.css
@@ -953,3 +953,7 @@ thead {
 	-moz-border-radius-topleft: 0.6em;
 	-moz-border-radius-topright: 0.6em;
 }
+
+.note_details {
+	display: none;
+}
