--- a/themes/simplygreen/style.css
+++ b/themes/simplygreen/style.css
@@ -1006,3 +1006,7 @@ table.center {
 	display:none;
 	-moz-border-radius-topleft: 0.6em;
 	-moz-border-radius-topright: 0.6em; }
+
+.note_details {
+	display: none;
+}
