--- a/themes/wood/style.css
+++ b/themes/wood/style.css
@@ -1131,3 +1131,7 @@ button {
 	-moz-border-radius-topleft: 0.6em;
 	-moz-border-radius-topright: 0.6em;
 }
+
+.note_details {
+	display: none;
+}
